[package]
name = "memory-leak-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# hyper = { version = "1", features = ["full"] }
# hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full", "tracing"] }
# http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10.5"
once_cell = "1"
anyhow = "1"

jemalloc_pprof = "0.4.2"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.4", features = [
  "profiling",
  # "stats",
  # "debug",
] }

